Revision history for Perl module Perl::Critic::StricterSubs

0.07 2024-09-30

    [Enhancements]
    * ProhibitCallsToUndeclaredSubs did not know that functions like
      flock and seek and opendir took filehandles or readhandles, so would
      give false positives. (GH#15)

0.06 2022-04-25

    [Enhancements]
    * Modules::RequireExplicitInclusion: Disambiguated package names,
      such as Foo::Bar:: instead of just Foo::Bar, are now OK.
      Thanks, Olaf Alders and Klaus S. Madsen.

    * Modules::RequireExplicitInclusion: Add "utf8" to the list of
      built-in modules that don't require "use".  Thanks, Klaus S. Madsen.

0.05 2015-02-20

    [Bug Fixes]
    * Corrected dependencies listed in the META files. GH #1

0.04 2015-02-18

    [Bug Fixes]
    * Fixed RT #72022. Uses of labels in next(), last() or redo() are no
      longer seen by ProhibitCallsToUndeclaredSubs.

    * Fixed RT #66863. Test::Deep not needed for testing.

    * Fixed RT #62184. All subroutines imported in a quoted but
      unparenthesized list are now seen by ProhibitCallsToUndeclaredSubs.

    * Fixed RT #43314 and 44609. Modules::RequireExplicitInclusion now
      allows __PACKAGE__->foo().

    * Fixed RT #43310. Subroutines::ProhibitCallsToUndeclaredSubs now
      handles imports that specify version number.

    * Fixed RT #36783. Subroutines::ProhibitCallsToUndeclaredSubs now
      handles qw{...} strings inside a list.

    [Miscellaneous]
    * Author-only tests have been moved to the xt/author directory.

    * The repository for this code has been moved to GitHub.

    * Modernized the format of this Changes log.

    [Gratitude]
    Thank you Tom Wyant for contributing all these patches. Thank you
    Mark Gardner for motivating me to finally ship.

0.03 2008-01-10

     [Bug Fixes]
     Fixed test failures due to incompatibility with newer
     PPI versions.  This distro now requires PPI 1.2 vis-a-vi
     Perl-Critic 1.080.  Thanks cpantesters!

0.02 2007-07-01
