@@ -7,6 +7,9 @@ Revision history for Perl module Perl::Critic::StricterSubs
       flock and seek and opendir took filehandles or readhandles, so would
       give false positives. (GH#15)
 
+    * Added configuration to Modules::RequireExplicitInclusion to specify
+      modules to ignore for violations.
+
 0.06 2022-04-25
 
     [Enhancements]
